# AI-Youtube-Shorts-Generator

./: .env.example  README.md  _append_outro.py  _concat2.sh  _concat_outro.py  _concat_outro.sh  _crop_job.py  _crop_job2.py  _crop_run.py  _inspect_ranges.py  _make_blocks.py  _make_clips_screen_subs.py  _make_subs.py  _make_subs2.py  _outro.py  _render_clips_final.py  _render_subs.py  _render_subs2.py  _render_subs3.py  _transcribe_job.py  _transcribe_run.py  main.py  pyproject.toml  requirements-local.txt
.claude/skills/youtube-shorts-generator/: SKILL.md
shorts_generator/: config.py  highlights.py  pipeline.py
shorts_generator/local/: __init__.py  clipper.py  downloader.py  llm.py  outro.py  subtitles.py  transcriber.py
